// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation should match snapshot with active link 1`] = `
<DocumentFragment>
  .emotion-25 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-24 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-24:last-child {
  margin-bottom: 24px;
}

.emotion-4 {
  margin-bottom: 24px;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.1111111111111112;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  min-height: 40px;
  padding: 8px 0;
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  box-sizing: border-box;
  color: #535353;
  cursor: 'pointer';
  min-height: 32px;
  min-width: 230px;
  padding: 8px 12px;
  text-overflow: ellipsis;
}

.emotion-5 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-8 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  min-height: 32px;
  margin-top: 20px;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  box-sizing: border-box;
  color: #0a68c1;
  cursor: 'pointer';
  min-height: 32px;
  min-width: 230px;
  padding: 8px 12px;
  text-overflow: ellipsis;
}

<nav
    aria-label="Sidebar"
    class="emotion-25"
    role="navigation"
  >
    <ul
      class="emotion-24"
      role="list"
    >
      <li
        class="emotion-4"
      >
        <div
          class="emotion-0"
          data-testid="/group1"
        >
          Group 1
        </div>
        <div
          class="emotion-4"
        >
          <div>
            <a
              class="emotion-3"
              href="/group1/page1"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                  data-testid="/group1/page1"
                >
                  Group 1 Page 1
                </div>
              </span>
            </a>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="emotion-5"
          data-testid="divider"
        />
      </li>
      <li
        class="emotion-4"
      >
        <div
          class="emotion-0"
          data-testid="/group2"
        >
          Group 2
        </div>
        <div
          class="emotion-4"
        >
          <div
            class="emotion-8"
            id="/group2/page1"
          >
            Group 2 Page 1
          </div>
          <div>
            <a
              class="emotion-3"
              href="/group2/page1/a"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-9"
                  data-testid="/group2/page1/a"
                >
                  Group 2 Page 1 a
                </div>
              </span>
            </a>
          </div>
          <div>
            <a
              class="emotion-3"
              href="/group2/page1/b"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-9"
                  data-testid="/group2/page1/b"
                >
                  Group 2 Page 1 b
                </div>
              </span>
            </a>
          </div>
          <div
            class="emotion-8"
            id="/group2/page2"
          >
            Group 2 Page 2
          </div>
          <div>
            <a
              class="emotion-3"
              href="/group2/page2/a"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-9"
                  data-testid="/group2/page2/a"
                >
                  Group 2 Page 2 a
                </div>
              </span>
            </a>
          </div>
          <div>
            <a
              class="emotion-3"
              href="/group2/page2/b"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-9"
                  data-testid="/group2/page2/b"
                >
                  Group 2 Page 2 b
                </div>
              </span>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation should match snapshot with no active link 1`] = `
<DocumentFragment>
  .emotion-25 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-24 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-24:last-child {
  margin-bottom: 24px;
}

.emotion-4 {
  margin-bottom: 24px;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.1111111111111112;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  min-height: 40px;
  padding: 8px 0;
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  box-sizing: border-box;
  color: #535353;
  cursor: 'pointer';
  min-height: 32px;
  min-width: 230px;
  padding: 8px 12px;
  text-overflow: ellipsis;
}

.emotion-5 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-8 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  min-height: 32px;
  margin-top: 20px;
}

<nav
    aria-label="Sidebar"
    class="emotion-25"
    role="navigation"
  >
    <ul
      class="emotion-24"
      role="list"
    >
      <li
        class="emotion-4"
      >
        <div
          class="emotion-0"
          data-testid="/group1"
        >
          Group 1
        </div>
        <div
          class="emotion-4"
        >
          <div>
            <a
              class="emotion-3"
              href="/group1/page1"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                  data-testid="/group1/page1"
                >
                  Group 1 Page 1
                </div>
              </span>
            </a>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="emotion-5"
          data-testid="divider"
        />
      </li>
      <li
        class="emotion-4"
      >
        <div
          class="emotion-0"
          data-testid="/group2"
        >
          Group 2
        </div>
        <div
          class="emotion-4"
        >
          <div
            class="emotion-8"
            id="/group2/page1"
          >
            Group 2 Page 1
          </div>
          <div>
            <a
              class="emotion-3"
              href="/group2/page1/a"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                  data-testid="/group2/page1/a"
                >
                  Group 2 Page 1 a
                </div>
              </span>
            </a>
          </div>
          <div>
            <a
              class="emotion-3"
              href="/group2/page1/b"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                  data-testid="/group2/page1/b"
                >
                  Group 2 Page 1 b
                </div>
              </span>
            </a>
          </div>
          <div
            class="emotion-8"
            id="/group2/page2"
          >
            Group 2 Page 2
          </div>
          <div>
            <a
              class="emotion-3"
              href="/group2/page2/a"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                  data-testid="/group2/page2/a"
                >
                  Group 2 Page 2 a
                </div>
              </span>
            </a>
          </div>
          <div>
            <a
              class="emotion-3"
              href="/group2/page2/b"
            >
              <span
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                  data-testid="/group2/page2/b"
                >
                  Group 2 Page 2 b
                </div>
              </span>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
